# auto-media-organizer

./: .gitignore  LICENSE  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
src/: api.py  service.py
src/cli/: main.py
src/core/: analyzer.py  config.py  database.py  organizer.py  scanner.py  utils.py
src/web/dashboard/: index.html  main.js  package-lock.json  package.json  style.css
